umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0307_B123B45C67C89B1%10B2_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: basic_chemaxon
category: basic_chemaxon
basic_opensmiles:
  success: true
  summary:
    sum_formula: C2B9
    atom_count: 11
    bond_count: 25
